# claudeCodeTemplate

./: .env-example  .gitignore  .repomixignore  CHANGES_SUMMARY.md  CLAUDE.md  Makefile  Procfile.example  README.md  SETUP_CHECKLIST.md  TEMPLATE_GUIDE.md  bootstrap.py  install.py  package.json  pyproject.toml  repomix.config.json
.claude/: settings.json
.claude/agents/: analyst.md  coordinator.md  developer.md  documentation-writer.md  documenter.md  quality-gate.md  reviewer.md  searcher.md  system-analyst.md  tester.md
.claude/commands/: PRD.md  architect.md  brainstorm.md  document.md  fix.md  implement.md  project-status.md  refactor.md  ship.md  status.md  test.md  tools.md
.claude/commands/archive/: review.md  test.md  tools.md
.claude/commands/meta/: export-chat-for-analysis.md
.claude/hooks/: command_logger.py  mac_notifier.py  python_formatter.py  smart_blocker.py
.claude/local/: claude  package.json
docs/: AGENT_ARCHITECTURE.md  AVAILABLE_TOOLS.md  PRD-logging-helper.md  TEMPLATE_REVIEW.md  agent-superpowers-upgrade-plan.md  feedback-analysis-high-roi.md
docs/context/: CLAUDE-ACTIVE-CONTEXT.md  CLAUDE-PATTERNS.md  CLAUDE-PROJECT-WISDOM.md
frontend/: package.json  vite.config.ts
frontend/src/: main.js
frontend/src/utils/: logger-example.ts  logger.ts
make/: ai.mk  clean.mk  context.mk  database.mk  help.mk  logging.mk  project.mk  quality.mk  setup.mk  utils.mk
make/tools/: SHOREMAN_README.md  __init__.py  claude_chat_analyzer.py  claude_code_setup.py  logger.py  logger_example.py  setup_mcp_servers.py  setup_project.py
