[project]
name = "claude-dev-template"
version = "0.1.0"
description = "A template for AI-assisted development with Claude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "llm>=0.26",
    "llm-gemini>=0.23",
    "llm-anthropic>=0.17",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
[tool.uv]
dev-dependencies = [
    "claude2md @ git+https://github.com/ajk68/claude2md.git",
]
